plugins {
    id 'com.android.library'
//    id 'org.jetbrains.kotlin.android' version "1.7.10" // for java
    id 'org.jetbrains.kotlin.android' // for kotlin
    id 'maven-publish'
}
apply plugin: 'kotlin-kapt'

android {
    compileSdk 34

    defaultConfig {
        minSdk 23
        targetSdk 34

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    lintOptions {
        abortOnError false
        absolutePaths false
        lintConfig file('lint.xml')
    }

 /*   tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }*/

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17'
    }

   /* // Group ID of the library module
    group = 'com.mergn.insights'

    archivesBaseName = "mergn"
    // Version of the library module
    def libVersion = '1.0.0'
    version = project.hasProperty('libraryVersion') ? project.libraryVersion : libVersion*/
    if (project.android.hasProperty("namespace")) {
        namespace("com.mergn.insights")
    }
}

dependencies {

    implementation 'androidx.core:core-ktx:1.7.0'
    implementation 'androidx.appcompat:appcompat:1.5.1'
    //implementation 'com.google.android.material:material:1.7.0'
    implementation 'com.google.firebase:firebase-messaging-ktx:23.4.1'
    testImplementation 'junit:junit:4.13.2'
    //testImplementation 'org.junit.jupiter:junit-jupiter'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    implementation "com.squareup.retrofit2:retrofit:2.9.0"
    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
    implementation "com.squareup.okhttp3:okhttp:4.9.1"
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation "androidx.room:room-runtime:2.4.0"
    //implementation "android.arch.persistence.room:runtime::2.4.0"
    kapt "androidx.room:room-compiler:2.4.0"
    //kapt "android.arch.persistence.room:compiler:2.4.0"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
    implementation 'org.jsoup:jsoup:1.17.2'
    implementation "androidx.work:work-runtime-ktx:2.7.0"
    /*def room_version = "1.1.1"
    implementation "android.arch.persistence.room:runtime:$room_version"
    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
    testImplementation "android.arch.persistence.room:testing:$room_version"*/
    /*testImplementation 'org.mockito:mockito-core:4.0.0'
    testImplementation 'org.jetbrains.kotlin:kotlin-test:1.5.31'
    testImplementation 'org.mockito:mockito-kotlin:4.0.0'
    androidTestImplementation 'org.mockito:mockito-android:2.24.5'
    implementation "androidx.work:work-runtime-ktx:2.7.1"
    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"*/

    implementation 'com.android.installreferrer:installreferrer:2.2'
}

afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.release

                groupId = 'com.github.mergn-code'
                artifactId = 'mergn-sdk-kotlin'
                version = '1.0'
            }
        }
    }
}